Fix main alignments

--- a/style.css
+++ b/style.css
@@ -51,14 +51,12 @@ table {
 body {
     background: #FFD370;
     font-family:'Noto Sans TC';
+    margin: 0 auto;
+    width: 70%;
 }
 
 img {
     width: 100%;
-}
-
-.container {
-    margin: 87px 116px;
 }
 
 .logo {
@@ -68,6 +66,7 @@ img {
 
 .main {
     display: flex;
+    justify-content: center;
 }
 
 .main img {
@@ -75,7 +74,7 @@ img {
 }
 
 .main form {
-    padding-left: 106px;
+    margin-left: 106px;
     display: flex;
     flex-direction: column;
 }
@@ -96,7 +95,7 @@ form input {
     font-weight: normal;
     border: none;
     border-radius: 10px;
-    width: 100%;
+    width: 304px;
     padding: 12px 16px;
     margin: 4px 0px;
 }
